# hardware-monorepo

./: .buckconfig  .gitignore  CLAUDE.md  README.md  counter.sv  counter_sim.wdb  counter_tb.sv  fusesoc.conf  pyproject.toml  run_sim.tcl  sim.py  teros.hdl  wave.ron  wave.tcl  xvsim.py
buck2/: cocotb_test.bzl  sv_library.bzl  system_verilog.bzl  verilator_sim.bzl  vivado_synth.bzl
cocotb_lib/axi/: axi4stream_bus.py  axi4stream_driver.py  axi4stream_monitor.py
common_hdl_lib/axi/: BUCK
common_hdl_lib/axi/src/: axi4s_skid_buffer.sv
common_hdl_lib/axi/tb/: BUCK  Makefile  axi4s_skid_buffer_scoreboard.py  axi4s_skid_buffer_tb.py  layout.surf.ron
common_hdl_lib/fifo/: BUCK
common_hdl_lib/mux/: BUCK
common_hdl_lib/mux/src/: modulo.sv  vector_muxcy.sv
common_hdl_lib/mux/synth/: BUCK  compare.py
common_hdl_lib/mux/tb/: BUCK  macros.bzl  modulo_harness.sv  (+1 more)
common_hdl_lib/utils/: BUCK
common_lib/pcap/: pcap.core  pcap2axi4s.svh  pcap2axi4s_pkg.sv  pcap_pkg.sv
common_lib/utils/: macros.svh  utils.core  utils.sv
common_sim_lib/pcap/: pcap2axi4s_pkg.sv  pcap_pkg.sv
common_sim_lib/utils/: utils.sv
fpgashark/: xilinx_bram.sv  xilinx_bram_tb.sv
fpgashark/packet_buffer/: BUCK  packet_buffer.core
rust/: BUCK
rust/src/: lib.rs
tcl/: capture_all_waves.tcl
testbench_lib/axi/: __init__.py  axi4stream_bus.py  axi4stream_driver.py  axi4stream_monitor.py
testbench_lib/core/: __init__.py  base_driver.py  base_environment.py  base_monitor.py  base_scoreboard.py  base_types.py
toolchains/: BUCK
verilator_xpm/: BUCK  FIFO36E2.v  verilator_xpm.core
(+19 files in other folders)
