[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-monorepo"
version = "0.1.0"
description = "Hardware design and verification repository using cocotb and verilator"
requires-python = ">=3.8"

dependencies = [
    "cocotb>=1.8.0",
    "fusesoc>=2.0",
    "pyshark>=0.6",
    "pytest>=8.3.5"
]

[tool.setuptools]
py-modules = []